--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "better-sqlite3": "^8.0.1",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.9"
   }
 }
